Institute view eke add new institute button fixed

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -17,7 +17,7 @@
     </div >
 
     <div class="col" >
-      <a href="/employee" class="btnview" >
+      <a href="/employee" class="btn btn-outline-info" >
         View Employees
       </a >
     </div >
@@ -234,7 +234,7 @@
           <!--Mobile Number One-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
-              <label class="control-label" for="mobileOne" >Contact One :</label >
+              <label class="control-label" for="mobileOne" >Mobile One :</label >
             </div >
             <div class="col-md-8" >
               <input id="mobileOne" data-th-field="*{mobileOne}" class="form-control mobile" tabindex="13"
@@ -249,7 +249,7 @@
           <!--Mobile Number Two-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
-              <label class="control-label" for="mobileTwo" >Contact Two:</label >
+              <label class="control-label" for="mobileTwo" >Mobile Two:</label >
             </div >
             <div class="col-md-8" >
               <input id="mobileTwo" data-th-field="*{mobileTwo}" class="form-control mobile" tabindex="14"
