--- a/src/main/resources/templates/punishment/punishment.html
+++ b/src/main/resources/templates/punishment/punishment.html
@@ -10,9 +10,9 @@
 <!--Heading Area-->
 <div class="container-fluid  ">
     <div class="row text-center ">
-        <!-- New Institute Button-->
+        <!-- New Punishment Button-->
         <div class="col">
-            <a class="btn btn-success" href="/punishment/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a class="btn btn-success" href="/punishment/add"><i class="fa fa-plus" style="font-size: 20px"></i>&nbsp;&nbsp;Add New Punishment</a>&nbsp;
         </div>
         <!-- List Name-->
         <div class="col">
