--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -16,7 +16,9 @@
 
 </head>
 <body >
-
+<!--Login Background-->
+<link data-th-href="@{/css/style.css}" media="all" rel="stylesheet" type="text/css"/>
+<link data-th-href="@{/css/magnific-popup.css}" media="all" rel="stylesheet" type="text/css"/>
 
 <div class="form-area">
 
