censure add new button was fixed

--- a/src/main/resources/templates/censure/censure.html
+++ b/src/main/resources/templates/censure/censure.html
@@ -16,8 +16,10 @@
     </div >
 
     <div class="col" >
+
       <a class="btn btn-info" href="/employee/findAll" ><i class="fa fa-plus" ></i >
-        &nbsp;Add New</a >
+        &nbsp;Add New Censure</a >
+
     </div >
 
   </div >
