institute type tel was fixed

--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -83,7 +83,7 @@
                             <label class="control-label"  data-th-for="${'name'}">Land :</label>
                         </div>
                         <div class="col-md-4">
-                            <input class="form-control" data-th-field="*{land}" required tabindex="4" type="number"
+                            <input class="form-control" data-th-field="*{land}" required tabindex="4" type="tel"
                                      maxlength="10"/>
                             <span class="error"
                                   data-th-errors="*{land}" data-th-if="${#fields.hasErrors('land')}">Error Name</span>
