--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -111,7 +111,7 @@
           </div >
           <div class="col-md-8" >
             <input type="datetime-local" class="form-control " onchange="dateMatch()"
-                   data-th-field="*{endAt}" id="endAt" required >
+                   data-th-field="*{endAt}" id="endAt"  >
 
             <span data-th-errors="*{endAt}"
                   data-th-if="${#fields.hasErrors('endAt')}" class="error" >Error Employee code
