Report view authorization was fixed

--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -51,7 +51,7 @@
             </div>
          </li>
 
-         <li class="nav-itemBatch dropdown active" data-sec-authorize="hasAnyAuthority('ROLE_COMMISSIONER','ROLE_ADMIN')">
+         <li class="nav-itemBatch dropdown active" data-sec-authorize="hasAnyAuthority('ROLE_COMMISSIONER')">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"> <i class="fa fa-book-open"></i> Report</a>
             <div class="dropdown-menu text-dark" aria-labelledby="dropdownId">
