--- a/src/main/resources/templates/censure/censure.html
+++ b/src/main/resources/templates/censure/censure.html
@@ -73,7 +73,7 @@
         <span aria-hidden="true" >&times;</span >
       </button >
       <h3 class="text-center text-danger" >
-        <strong >There is no censure upto know please add censure to the system
+        <strong >There is no censure upto now please add censure to the system
                  using add button.
         </strong >
       </h3 >
@@ -88,6 +88,9 @@
     /*active boostrap alert - start*/
     $(".alert").alert();
     /*active boostrap alert - end*/
+
+
+
 </script >
 </body >
 </html >
