--- a/src/main/resources/templates/institute/institute.html
+++ b/src/main/resources/templates/institute/institute.html
@@ -58,7 +58,7 @@
                         <th data-th-text="${institute.address}"></th>
                         <th>
                             <a id="instituteView" data-th-href="${'/institute/' + institute.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
-                            <a id="instituteEdit" data-th-href="${'/institute/edit/' + institute.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
+<!--                            <a id="instituteEdit" data-th-href="${'/institute/edit/' + institute.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>-->
                             <a data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" data-th-href="${'/institute/delete/' + institute.id}" class="btn btn-danger btn-sm">
                            <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
                         </th>
