employee find all payroll number removed

--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -76,7 +76,7 @@
             <input id="abc" data-th-field="*{refNumber}" class="form-control" type="text" readonly />
           </div >
         </div >
-        <!--offence type-->
+        <!--offence type radio button eka-->
         <div class="form-row text-right" >
           <div class="col-md-4" >
             <label class="control-label" for="offence" >Offence Type :</label >
