--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -69,7 +69,7 @@
             <input id="id" data-th-field="*{id}" class="form-control" type="text" readonly />
           </div >
         </div >
-        <!--Leave Type -->
+        <!--Leave Type radio button eka -->
         <div class="form-row text-right" >
           <div class="col-md-4" >
             <label class="control-label" for="id" >Leave Type :</label >
