institute eke edit eka haduwa

--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col-md-4">
                             <input class="form-control" data-th-field="*{id}" id="id" readonly type="text"/>
-                            <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden"/>
+                            <input class="form-control" data-th-field="*{liveOrDead}" readonly type="hidden"/>
                         </div>
                     </div>
                     <!--Main Institute -->
