institute update issue fixed in addInstitute.html

--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -48,6 +48,7 @@
                         </div>
                         <div class="col-md-4">
                             <input class="form-control" data-th-field="*{id}" id="id" readonly type="text"/>
+                            //liveOrDead eka liveDead thibboth waradi ethakota update wenne nea
                             <input class="form-control" data-th-field="*{liveOrDead}" readonly type="hidden"/>
                         </div>
                     </div>
