--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -44,11 +44,11 @@
                     <!--Id-->
                     <div class="form-row text-right" data-th-if="${addStatus==false}" id="idStatus">
                         <div class="col-md-4">
-                            <label class="control-label" for="id">ID :</label>
+                            <label class="control-label" data-th-for="${id}">ID :</label>
                         </div>
                         <div class="col-md-4">
-                            <input class="form-control" data-th-field="*{id}" id="id" readonly type="text"/>
-                            //liveOrDead eka liveDead thibboth waradi ethakota update wenne nea
+                           <!--liveOrDead eka liveDead thibboth waradi ethakota update wenne nea-->
+                            <input class="form-control" data-th-field="*{id}" readonly />
                             <input class="form-control" data-th-field="*{liveOrDead}" readonly type="hidden"/>
                         </div>
                     </div>
