form wla reuired red astrik mark eka add kala

--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -282,3 +282,8 @@ input{
 input{
     color: black;
 }
+/*required astrik mark eka form wla*/
+.required:after {
+    content:" *";
+    color: red;
+}
