--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -58,6 +58,8 @@
                <a data-th-href="@{'/report/instituteEmployee'}" class="nav-link text-dark"> Institute Employee Report</a>
                <a data-th-href="@{'/report/employeeAllCount'}" class="nav-link text-dark">Employee And Action </a>
                <a data-th-href="@{'/report/offenceCount'}" class="nav-link text-dark">Offence And Record Count </a>
+               <a data-th-href="@{'/report/instituteCensure'}" class="nav-link text-dark">Institute Vs Censure</a>
+               <a data-th-href="@{'/report/instituteCensureOne'}" class="nav-link text-dark">institute Vs censure more </a>
             </div>
          </li>
       </ul>
