--- a/src/main/resources/templates/punishment/addPunishment.html
+++ b/src/main/resources/templates/punishment/addPunishment.html
@@ -47,7 +47,7 @@
                     <!--Main Punishment -->
                     <div class="form-row text-right">
                         <div class="col-md-4">
-                            <label class="control-label" for="mainPunishment">Punishment Type :</label>
+                            <label class="control-label" for="mainPunishment">Punishment Type </label>
                         </div>
                         <div class="col-md-4">
 
@@ -65,7 +65,7 @@
                     <div class="form-row text-right">
                         <div class="col-md-4">
                             <div class="required">
-                            <label class="control-label" data-th-for="${'name'}" >Name :</label>
+                            <label class="control-label" data-th-for="${'name'}" >Name </label>
                             </div>
                         </div>
                         <div class="col-md-4">
