employee working status visibility in addEmployee.html was fixed

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -300,7 +300,7 @@
             </div >
           </div >
           <!--Employee status-->
-          <div class="form-row text-right" >
+          <div class="form-row text-right" data-th-if="${addStatus==false}">
             <div class="col-md-4" >
               <label class="control-label" for="employeeStatus" >Employee Status :</label >
             </div >
