nav bar reports were fixed

--- a/src/main/resources/templates/commendation/commendation.html
+++ b/src/main/resources/templates/commendation/commendation.html
@@ -17,7 +17,7 @@
         <div class="col">
             <h2  class="text-center">
                 <strong>
-                    Offence Management
+                    commendation Management
                 </strong>
             </h2>
         </div>
