--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -7,7 +7,9 @@
 
 <nav class="navbar navbar-expand-sm navbar-dark " style="background-color:rgba(55,5,5,0.91);" data-th-fragment="navBarFragment">
 
-   <a class="navbar-brand" href="#"><i class="fa fa-home" style="font-size: 18px"></i></a>
+   <img data-th-src="${'/img/avatar.png'}"alt="Nav bar logo"width="40" height="45">
+   <a class="navbar-brand" href="/home"><i class="fa fa-home" style="font-size: 18px"></i></a>
+
 
    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
            aria-controls="collapsibleNavId"
@@ -55,11 +57,13 @@
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"> <i class="fa fa-book-open"></i> Report</a>
             <div class="dropdown-menu text-dark" aria-labelledby="dropdownId">
+               <a data-th-href="@{'/employee'}" class="nav-link text-dark">Employee Detail Report</a>
                <a data-th-href="@{'/report/instituteEmployee'}" class="nav-link text-dark"> Institute Headcount Report</a>
                <a data-th-href="@{'/report/employeeAllCount'}" class="nav-link text-dark">Employee And Action </a>
                <a data-th-href="@{'/report/offenceCount'}" class="nav-link text-dark">Offence And Record Count </a>
-               <a data-th-href="@{'/report/instituteCensure'}" class="nav-link text-dark">Institute Vs Censure</a>
-               <a data-th-href="@{'/employee'}" class="nav-link text-dark">Employee Detail Report</a>
+               <a data-th-href="@{'/report/instituteCensure'}" class="nav-link text-dark">Institute Vs Censure count</a>
+               <a data-th-href="@{'/report/instituteCensureOne'}" class="nav-link text-dark">Institute wise Censure count</a>
+
             </div>
          </li>
       </ul>
