--- a/src/main/resources/templates/commendation/commendation.html
+++ b/src/main/resources/templates/commendation/commendation.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--Heading Area-->
-<div class="container-fluid  ">
+<div class="container-fluid form-boarder">
     <div class="row text-center ">
         <!-- New Institute Button-->
         <a class="btn btn-info" href="/employee/findAll" ><i class="fa fa-plus" ></i >
