--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <!--heading Area-->
-<div class="container-fluid form-style" >
+<div class="container-fluid form-Border" >
   <div class="row text-center formManagement border-info" >
     <div class="col" >
       <a href="/home" id="btnHome" class="btn btn-outline-info" >
